# tapsrs

./: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.test  Makefile  Package.swift  README.md  build.rs  cbindgen.toml  checklist.md  implementation_plan.md  run-linux-tests.sh  setup-hooks.bat  setup-hooks.sh  test-linux-build.sh  test.c
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
bindings/swift/: README.md
bindings/swift/Sources/TransportServices/: Connection.swift  Endpoints.swift  Errors.swift  Example.swift  HandleWrapper.swift  Listener.swift  PathMonitor.swift  Preconnection.swift  Properties.swift  Runtime.swift  TransportServices.swift  module.modulemap
bindings/swift/Tests/TransportServicesTests/: BasicTests.swift  TransportServicesTests.swift
examples/: path_monitor.rs  path_monitor_detailed.rs  path_monitor_watch.rs  test_windows_path_monitor.rs
examples/ffi/: path_monitor_example.c
examples/swift/: Package.swift  PathMonitorExample.swift  TransportServicesExample.swift
examples/swift/.build/: workspace-state.json
scripts/: build-artifact-bundle.ps1  build-artifact-bundle.sh  build-multi-platform.ps1  install-cross-tools.sh  test-artifact-bundle-docker.sh
src/: connection.rs  connection_group.rs  connection_properties.rs  error.rs  framer.rs  lib.rs  listener.rs  message.rs  preconnection.rs  test_formatting.rs  types.rs
src/ffi/: connection.rs  error.rs  listener.rs  message.rs  mod.rs  path_monitor.rs  preconnection.rs  runtime.rs  security_parameters.rs  transport_properties.rs  types.rs
src/path_monitor/: android.rs  apple.rs  integration.rs  linux.rs  mod.rs  network_sys.rs  tests.rs  windows.rs
src/tests/: background_reading_tests.rs  connection_group_tests.rs  connection_properties_tests.rs  connection_termination_tests.rs  connection_tests.rs  endpoint_management_tests.rs  group_termination_tests.rs  integration_tests.rs  lifecycle_events_tests.rs  listener_tests.rs  message_properties_tests.rs  message_sending_tests.rs  mod.rs  mtu_tests.rs  preconnection_tests.rs  property_updates_tests.rs  readonly_properties_tests.rs  rendezvous_tests.rs  settable_properties_tests.rs  tcp_properties_tests.rs  test_utils.rs
