[package]
name = "transport_services"
version = "0.1.0"
edition = "2021"
authors = ["Transport Services Contributors"]
description = "Transport Services - RFC 9622 implementation"
repository = "https://github.com/yourusername/transport-services-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "transport_services"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
bytes = "1.5"
futures = "0.3"

# Optional dependencies for specific transports
quinn = { version = "0.10", optional = true }
tokio-rustls = { version = "0.25", optional = true }
webrtc = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"

[features]
default = ["quic", "tls"]
quic = ["quinn"]
tls = ["tokio-rustls"]
webrtc = ["dep:webrtc"]
ffi = []

# Build optimizations for release
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
