[package]
name = "transport_services"
version = "0.1.0"
edition = "2021"
authors = ["Transport Services Contributors"]
description = "Transport Services - RFC 9622 implementation"
repository = "https://github.com/yourusername/transport-services-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "transport_services"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
log = "0.4.27"
bytes = "1.10.1"
futures = "0.3.31"

# Optional dependencies for specific transports
quinn = { version = "0.11.8", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
webrtc = { version = "0.13.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"
env_logger = "0.11.8"

[features]
default = ["quic", "tls"]
quic = ["quinn"]
tls = ["tokio-rustls"]
webrtc = ["dep:webrtc"]
ffi = []

# Build optimizations for release
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
