[package]
name = "transport_services"
version = "0.1.0"
edition = "2021"
authors = ["Transport Services Contributors"]
description = "Transport Services - RFC 9622 implementation"
repository = "https://github.com/edgeengineer/tapsrs"
license = "MIT OR Apache-2.0"

[lib]
name = "transport_services"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
log = "0.4.27"
bytes = "1.10.1"
futures = "0.3.31"
uuid = { version = "1.11", features = ["v4"] }
socket2 = { version = "0.5", features = ["all"] }
env_logger = "0.11.8"
once_cell = "1.21.3"

# Optional dependencies for specific transports
quinn = { version = "0.11.8", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
webrtc = { version = "0.13.0", optional = true }

# Platform-specific dependencies for path monitoring
[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
tokio-test = "0.4.4"
env_logger = "0.11.8"
ctrlc = "3.4"
chrono = "0.4"

[build-dependencies]
cbindgen = { version = "0.29.0", optional = true }

[features]
default = ["quic", "tls"]
quic = ["quinn"]
tls = ["tokio-rustls"]
webrtc = ["dep:webrtc"]
ffi = ["cbindgen"]
cbindgen = ["dep:cbindgen"]

# Build optimizations for release
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[example]]
name = "path_monitor"
required-features = []

[[example]]
name = "path_monitor_detailed"
required-features = []

[[example]]
name = "path_monitor_watch"
required-features = []
